# ctxos-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_1_COMPLETION.md  CORE_MODULES_SUMMARY.md  Cargo.toml  Dockerfile.api  Dockerfile.dev  Dockerfile.frontend  Dockerfile.frontend.dev  ENGINES_QUICK_REFERENCE.md  FINAL_DELIVERY_REPORT.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  Makefile  PROJECT_STATUS_NEXT_PHASE.md  QUICK_REFERENCE.md  README.md  SECTIONS_5_7_STRATEGIC_PLAN.md  SECTION_4_COMPLETION.md  SECTION_4_VISUAL_OVERVIEW.md  SECURITY.md  TODO.md  bandit-report.json  docker-compose.dev.yml  docker-compose.yml  jest.config.js  npm-audit-report.json  package-lock.json  package.json  pyproject.toml  semgrep-report.json  tailwind.config.js  tsconfig.json  verify_core_modules.py
.github/: branch-protection.yml
agents/: base_agent.py  base_agent_async.py  mcp_endpoints.py  mcp_orchestrator.py
api/: main.py
benchmarks/: README.md  benchmark_runner.py
cli/: ctxos.py
collectors/: base_collector.py
configs/: agents.yml  engines.yml
docs/: cli-implementation.md  cli-tutorial.md  development.md  final_status_report.md  implementation_complete.md  index.md  quick_reference.md  session_summary.md  todo.md
engines/: __init__.py  base_engine.py  engine_manager.py
examples/: cli_demo_workflows.sh  collect_example.py  context_summarizer_examples.py  core_modules_example.py  graph_example.py  normalizers_example.py  risk_example.py
nginx/: nginx.conf
normalizers/: __init__.py  (+1 more)
public/: index.html
(+165 files in other folders)
