[tool.poetry]
name = "ctxos"
version = "0.1.0"
description = "CtxOS - Context-based Operating System for Security"
authors = ["CtxOS Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "api" },
    { include = "cli" },
    { include = "collectors" },
    { include = "core" },
    { include = "engines" },
    { include = "normalizers" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pyyaml = "^6.0"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.21.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
redis = "^5.0"
python-dotenv = "^1.0"
typer = "^0.9.0"
rich = "^13.0"
requests = "^2.31"
networkx = "^3.2"
dataclasses-json = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
isort = "^5.12"
mypy = "^1.5"
pytest-xdist = "^3.0"
bandit = "^1.7"
safety = "^2.3"
semgrep = "^1.45"
autoflake = "^2.2"

[tool.poetry.scripts]
ctxos = "cli.ctxos:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests", "core/tests", "engines/tests", "api/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true